configured the passport for auth
